# MySongPlayer

./: .gitignore  .mailmap  .qmlls.ini  AudioInfoBox.qml  AudioSearchModel.h  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ImageButton.qml  PlayerController.h  README.md  SearchField.qml  SearchPanel.qml  main.cpp
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
doc/: ARCHITECTURE.md  DEVELOPMENT.md
qml/: AudioInfoBox.qml  Main.qml  PlaylistPanel.qml  SearchField.qml  SearchPanel.qml  qmldir
qml/components/base/: AudioListItem.qml  CustomSlider.qml
qml/components/complex/: AddSongOptionsPopup.qml  AudioInfoBox.qml  AudioProgressBar.qml  ImageButton.qml  LyricsDisplay.qml  PlayModeButton.qml  SearchField.qml  VolumeSlider.qml
qml/layouts/: BottomBar.qml  MainArea.qml  TopBar.qml
qml/panels/: PlayListPanel.qml  PlaylistPanel.qml  SearchPanel.qml
qml/styles/: AppStyles.qml
qml/utils/: TimeUtils.js
scripts/: build-appimage.sh  build-linux.sh  build-macos.sh  build-windows.ps1
src/: PlayerController.cpp  PlayerController.h  main.cpp
src/adapters/: QtAudioTrackAdapter.cpp
src/controllers/: AudioPlayer.cpp  AudioPlayer.h  PlayerController.cpp  PlayerController.h
src/coordinators/: AudioCoordinator.cpp  PlaylistCoordinator.cpp  PlaylistCoordinator.h
src/core/: AudioImport.cpp  Lyrics.cpp  Playlist.cpp
src/include/adapters/: QtAudioTrackAdapter.h
src/include/controllers/: PlayerController.h
src/include/coordinators/: AudioCoordinator.h  PlaylistCoordinator.h
src/include/core/: AudioImport.h  AudioTrack.h  Lyrics.h  PlayMode.h  Playlist.h
src/include/infrastructure/: TagLibAudioMetadataReader.h
src/include/interfaces/: ICurrentSongManager.h  IPlaylistOperations.h  IPlaylistPersistence.h
src/include/models/: AudioInfo.h  AudioSearchModel.h  LyricsModel.h  PlaylistModel.h  PlaylistSearchModel.h
src/include/services/: AudioImporter.h  LyricsService.h  PlaylistStorageService.h
src/include/storage/: PlaylistDatabase.h
src/infrastructure/: TagLibAudioMetadataReader.cpp
src/interfaces/: IPlaylistOperations.h  IPlaylistPersistence.h
src/models/: AudioInfo.cpp  AudioInfo.h  AudioSearchModel.cpp  LyricsModel.cpp  LyricsModel.h  PlaylistModel.cpp  PlaylistModel.h  PlaylistSearchModel.cpp  PlaylistSearchModel.h  lyricsmodel.cpp  lyricsmodel.h
src/services/: AudioImporter.cpp  AudioImporter.h  LyricsService.cpp  LyricsService.h  PlaylistStorageService.cpp  PlaylistStorageService.h  lyricsservice.cpp  lyricsservice.h
src/storage/: PlaylistDatabase.cpp  PlaylistDatabase.h
tests/core/: PlaylistCoreTest.cpp
tests/integration/: AudioImporterAsyncTest.cpp  AudioSearchModelNetworkTest.cpp  PlaylistModelTest.cpp  PlaylistStorageTest.cpp  TagLibAudioMetadataReaderTest.cpp
tests/qml/: quicktest_main.cpp  tst_playlist_interactions.qml
uml/: songplayer_architecture.puml  songplayer_class_diagram.puml  songplayer_component_flow.puml  songplayer_sequence_diagram.puml  songplayer_state_diagram.puml  songplayer_use_case_diagram.puml
uml/architecture/: songplayer_architecture.puml
uml/class/: songplayer_class_diagram.puml
uml/sequence/: sequence_import_audio.puml  sequence_play_song.puml  sequence_save_playlist.puml  sequence_search_and_play.puml
uml/use-case/: songplayer_use_case_diagram.puml
